examples/good/05-if-else.tx
fun main(): Void {
  if(true) {
    printString("true");
  }

  if(false) {
    printString("false");
  } else {
    printString("true");
  }

  return;
}