examples/bad/05-if.tx
fun main(): Void {
  if(True)
    printString("true");

  return;
}